# sbc-projects

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: geoloop-ci.yml
docs/: oppsett-guide.md
geoloop/: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  TODO-avklaringer.md  config.example.yaml  config.yaml  main.py  notify.py
geoloop/.github/workflows/: ci.yml
geoloop/docs/: koblingsskjema.md
geoloop/geoloop/: __main__.py  config.py  notify.py
geoloop/geoloop/controller/: base.py  relay.py  stub.py
geoloop/geoloop/db/: store.py
geoloop/geoloop/engine/: ice_risk.py  models.py
geoloop/geoloop/sensors/: base.py  ds18b20.py  stub.py
geoloop/scripts/: entrypoint.sh  install.sh  setup-rpi.sh
geoloop/tests/: test_ds18b20.py  test_ice_risk.py  test_integration.py  test_met_client.py  test_relay.py  test_store.py  test_stubs.py  test_web_api.py
geoloop/web/: app.py
print-server/: README.md  flash.sh
print-server/setup/: 99-usb-printer.rules  add-printer.sh  airprint.service  airprint.service.tmpl  armbian_first_run.txt.example  captive-portal.py  captive-portal.service  cupsd.conf  dnsmasq.conf  first-boot.service  first-boot.sh  hostapd.conf  render-airprint.sh  wifi-check.service  wifi-check.sh
print-server/tests/: test_add_printer.bats  test_captive_portal.py  test_first_boot.bats  test_flash.bats  test_wifi_onboarding.bats
scripts/: setup-rpi.sh
spotify-spiller/: README.md  flash.sh
spotify-spiller/setup/: Automation_Custom_Script.sh  dietpi.txt
(+11 files in other folders)
