[project]
name = "geoloop"
version = "0.1.0"
description = "Styring av vannbåren varme i utendørs bakke med prediktiv oppstart"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "httpx>=0.28,<1",
    "pyyaml>=6.0,<7",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
rpi = [
    "gpiozero>=2.0,<3",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.25,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
